# AlgoritmerLib

./: .gitignore  CMakeLists.txt  README.md
data/greedy/: intervals.txt
src/: main.cpp
src/divide_and_conquer/: closest_point.cpp  closest_point.hpp
src/graphs/: dfs.cpp  dfs.hpp
src/greedy/: interval_scheduling.cpp  interval_scheduling.hpp
src/runner/: run_algorithm.cpp  run_algorithm.hpp
src/stabil_matching/: gale_shapley.cpp  gale_shapley.hpp
src/utils/: generate_data.cpp  generate_data.hpp  load_data.cpp  load_data.hpp  timer.hpp
